@@ -3,11 +3,11 @@
 
 ### BEGIN INIT INFO
 # Provides:            udev
-# Required-Start:      mountkernfs
+# Required-Start:      modules
 # Should-Start:
 # Required-Stop:
 # Should-Stop:
-# Default-Start:       sysinit
+# Default-Start:       S
 # Default-Stop:
 # Short-Description:   Populated /dev with device nodes.
 # Description:         Mounts a tempfs on /dev and starts the udevd daemon.
